--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1> nothing much here...</h1>
+<h1> Install xa-adlist</h1>
 <hr>
-Page awaiting content
+<a href="https://tc012.gtk.cl/xa-adlist/cfads.txt"> https://tc012.gtk.cl/xa-adlist/cfads.txt </a>
 <hr>
